Frontend/src/App.css
table, td, th {
  border: 1px solid;
}

table {
  width: 100%;
  border-collapse: collapse;
}


/* Remove default bullets */
ul, #myUL {
  list-style-type: none;
}

/* Remove margins and padding from the parent ul */
#myUL {
  margin: 0;
  padding: 0;
}

/* Style the caret/arrow */
.caret {
  cursor: pointer;
  user-select: none; /* Prevent text selection */
}

/* Create the caret/arrow with a unicode, and style it */
.caret::before {
  content: "\25B6";
  color: black;
  display: inline-block;
  margin-right: 6px;
}

/* Rotate the caret/arrow icon when clicked on (using JavaScript) */
.caret-down::before {
  transform: rotate(90deg);
}

/* Hide the nested list */
.nested {
  display: none;
}

/* Show the nested list when the user clicks on the caret/arrow (with JavaScript) */
.active {
  display: block;
  padding: 0px;
}

/*index.js*/
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.header {
  padding: '10px';
  font-family: "Lucida Console", "Courier New", monospace;
  background-color: #2E3B55 ;
  color: white;
  text-align: center;
}
.body{
  font-family: "Lucida Console", "Courier New", monospace;
  padding:'15px';
  padding-right: 20px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
  color:black;
  font-size: large;
}

.linkButton{
  padding: 10px;
  background-color: #2E3B55;
  color:white;
  border-radius: 25px;
  font-weight: 300;
  border:#2E3B55 2px;
}

.linkButton:hover{
  background-color: #FFFFFF;
  color:#2E3B55;
  transition-duration:100ms;
  border:#2E3B55 2px solid;

}
.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.statcontainer{
  display: flex;
  align-items: center;
  align-items: start;
  justify-content: space-between;
  border-top:black 2px dashed;
}

/*index.js*/
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/*Used in SystemDetails.js*/
.info-container {
  padding: 10px;
  padding-top: 80px;
}

/*Used in SystemDetails.js*/
.row {
  display: flex;
  justify-content: space-evenly;
}

/*Page2.css*/
.sidebar {
  background-color: #B6D1EE;
  border-radius: 25px;
  min-width: 250px;
  height: fit-content;
  padding: 10px;
  font-family: "Lucida Console", "Courier New", monospace;
  border: 5px solid;
  border-color: #2E3B55;
  font-weight: bold;
  font-size: large;
}

p.sidebarHead {
  color: black;
  text-align: center;
  font-weight: bold;
  font-family: "Lucida Console", "Courier New", monospace;
  font-size: large;
}

.results-container {
  height: fit-content;
  padding-top: 80px;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-evenly;
}

.results-table {
  padding: 10px;
}

@media (max-width: 1150px) {
  .results-container {
      flex-direction: column;
      flex-wrap: nowrap;
  }
}

/*Used in InfoTable.js ModelTable.js MultiplierInvariants.js rationalpointstable.js*/
.table-component {
  margin: 10px;
}

.padded-page {
    margin-top: 50px;
    margin-left: 1px;
    padding: 25px;
}
/* Pagination Container Styles */
.custom-pagination {
  display: flex;
  justify-content: center;
  padding-left: 0;
  list-style: none;
}

/* Pagination Item Styles */
.custom-pagination .page-item {
  margin: 0 2px;
}

.custom-pagination .page-item .page-link {
  color: #007bff;
  background-color: #fff;
  border: 1px solid #ddd;
  padding: 5px 10px;
}

.custom-pagination .page-item.active .page-link {
  z-index: 3;
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
}

.custom-pagination .page-item.disabled .page-link {
  color: #6c757d;
  pointer-events: none;
  background-color: #fff;
  border-color: #ddd;
}

.even-row {
  background-color: #d0d6db; 
}

.odd-row {
  background-color: #ffffff; 
}

.active-filters-container {
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
  background-color: #f2f2f2;
}

.filter-chip {
  margin: 5px;
  padding: 5px 10px;
  background-color: #ddd; 
  border-radius: 20px;
  display: inline-flex;
  align-items: center;
}

.filter-chip button {
  margin-left: 10px;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

